@@ -14,3 +14,4 @@ Contributors:
    * Numerous Windows fixes
  * Rui Nuno Capela
    * Fixes for X11 in Qt4
+   * Qt5 wrappers
