@@ -23,13 +23,11 @@ suil_host_new(SuilPortWriteFunc       write_func,
               SuilPortSubscribeFunc   subscribe_func,
               SuilPortUnsubscribeFunc unsubscribe_func)
 {
-	SuilHost* host = (SuilHost*)malloc(sizeof(struct SuilHostImpl));
+	SuilHost* host = (SuilHost*)calloc(1, sizeof(struct SuilHostImpl));
 	host->write_func       = write_func;
 	host->index_func       = index_func;
 	host->subscribe_func   = subscribe_func;
 	host->unsubscribe_func = unsubscribe_func;
-	host->touch_func       = NULL;
-	host->gtk_lib          = NULL;
 	return host;
 }
 
