@@ -24,6 +24,7 @@
 
 #define GTK2_UI_URI  LV2_UI__GtkUI
 #define QT4_UI_URI   LV2_UI__Qt4UI
+#define QT5_UI_URI   LV2_UI_PREFIX "Qt5UI"
 #define X11_UI_URI   LV2_UI__X11UI
 #define WIN_UI_URI   LV2_UI_PREFIX "WindowsUI"
 #define COCOA_UI_URI LV2_UI__CocoaUI
@@ -44,6 +45,8 @@ suil_ui_supported(const char* container_type_uri,
 	            && !strcmp(ui_type_uri, QT4_UI_URI))
 	           || (!strcmp(container_type_uri, QT4_UI_URI)
 	               && !strcmp(ui_type_uri, GTK2_UI_URI))
+	           || (!strcmp(container_type_uri, QT5_UI_URI)
+	               && !strcmp(ui_type_uri, GTK2_UI_URI))
 	           || (!strcmp(container_type_uri, GTK2_UI_URI)
 	               && !strcmp(ui_type_uri, X11_UI_URI))
 	           || (!strcmp(container_type_uri, GTK2_UI_URI)
@@ -51,6 +54,8 @@ suil_ui_supported(const char* container_type_uri,
 	           || (!strcmp(container_type_uri, GTK2_UI_URI)
 	               && !strcmp(ui_type_uri, COCOA_UI_URI))
 	           || (!strcmp(container_type_uri, QT4_UI_URI)
+	               && !strcmp(ui_type_uri, X11_UI_URI))
+	           || (!strcmp(container_type_uri, QT5_UI_URI)
 	               && !strcmp(ui_type_uri, X11_UI_URI))) {
 		return SUIL_WRAPPING_EMBEDDED;
 	} else {
@@ -72,34 +77,46 @@ open_wrapper(SuilHost*      host,
 		module_name = "suil_gtk2_in_qt4";
 	}
 #endif
+#ifdef SUIL_WITH_GTK2_IN_QT5
+	if (!strcmp(container_type_uri, QT5_UI_URI)
+	    && !strcmp(ui_type_uri, GTK2_UI_URI)) {
+		module_name = "suil_gtk2_in_qt5";
+	}
+#endif
 #ifdef SUIL_WITH_QT4_IN_GTK2
 	if (!strcmp(container_type_uri, GTK2_UI_URI)
-	           && !strcmp(ui_type_uri, QT4_UI_URI)) {
+	    && !strcmp(ui_type_uri, QT4_UI_URI)) {
 		module_name = "suil_qt4_in_gtk2";
 	}
 #endif
 #ifdef SUIL_WITH_X11_IN_GTK2
 	if (!strcmp(container_type_uri, GTK2_UI_URI)
-	           && !strcmp(ui_type_uri, X11_UI_URI)) {
+	    && !strcmp(ui_type_uri, X11_UI_URI)) {
 		module_name = "suil_x11_in_gtk2";
 	}
 #endif
 #ifdef SUIL_WITH_WIN_IN_GTK2
 	if (!strcmp(container_type_uri, GTK2_UI_URI)
-	           && !strcmp(ui_type_uri, WIN_UI_URI)) {
+	    && !strcmp(ui_type_uri, WIN_UI_URI)) {
 		module_name = "suil_win_in_gtk2";
 	}
 #endif
 #ifdef SUIL_WITH_COCOA_IN_GTK2
 	if (!strcmp(container_type_uri, GTK2_UI_URI)
-	           && !strcmp(ui_type_uri, COCOA_UI_URI)) {
+	    && !strcmp(ui_type_uri, COCOA_UI_URI)) {
 		module_name = "suil_cocoa_in_gtk2";
 	}
 #endif
 #ifdef SUIL_WITH_X11_IN_QT4
 	if (!strcmp(container_type_uri, QT4_UI_URI)
-	           && !strcmp(ui_type_uri, X11_UI_URI)) {
+	    && !strcmp(ui_type_uri, X11_UI_URI)) {
 		module_name = "suil_x11_in_qt4";
+	}
+#endif
+#ifdef SUIL_WITH_X11_IN_QT5
+	if (!strcmp(container_type_uri, QT5_UI_URI)
+	    && !strcmp(ui_type_uri, X11_UI_URI)) {
+		module_name = "suil_x11_in_qt5";
 	}
 #endif
 
